--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,27 @@
 {
     "name": "squipix/laravel-idempotency",
     "description": "Stripe-style idempotency for Laravel APIs and queues",
+    "keywords": [
+        "laravel",
+        "idempotency",
+        "api",
+        "queue",
+        "stripe"
+    ],
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Squipix",
+            "email": "info@squipix.com"
+        }
+    ],
+    "require": {
+        "php": "^8.1|^8.2|^8.3",
+        "illuminate/support": "^10.0|^11.0",
+        "illuminate/database": "^10.0|^11.0",
+        "illuminate/cache": "^10.0|^11.0",
+        "illuminate/http": "^10.0|^11.0"
+    },
     "autoload": {
         "psr-4": {
             "squipix\\Idempotency\\": "src/"
@@ -12,5 +33,7 @@
                 "squipix\\Idempotency\\IdempotencyServiceProvider"
             ]
         }
-    }
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
