feat: Add metrics collection support for idempotency with Prometheus and Laravel Pulse

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,14 @@
         "illuminate/cache": "^10.0|^11.0",
         "illuminate/http": "^10.0|^11.0"
     },
+    "require-dev": {
+        "promphp/prometheus_client_php": "^2.0",
+        "laravel/pulse": "^1.0"
+    },
+    "suggest": {
+        "promphp/prometheus_client_php": "Required for Prometheus metrics collection (^2.0)",
+        "laravel/pulse": "Required for Laravel Pulse integration (^1.0)"
+    },
     "autoload": {
         "psr-4": {
             "squipix\\Idempotency\\": "src/"
