--- a/composer.json
+++ b/composer.json
@@ -37,13 +37,13 @@
     },
     "autoload": {
         "psr-4": {
-            "squipix\\Idempotency\\": "src/"
+            "Squipix\\Idempotency\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "squipix\\Idempotency\\IdempotencyServiceProvider"
+                "Squipix\\Idempotency\\IdempotencyServiceProvider"
             ]
         }
     },
